# vgi-survival

./: CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  survival_worker.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: survival.test
tests/: harness.py  test_client.py  test_survival.py  test_tables.py
vgi_survival/: __init__.py  buffering.py  schema_utils.py  survival.py  tables.py  worker.py
